# truckfi

./: next.config.js
truckfi/: Anchor.toml  README.md  package.json  tailwind.config.js
truckfi/programs/truckfi/: Cargo.toml
truckfi/programs/truckfi/src/: lib.rs
truckfi/src/app/: globals.css  layout.tsx  page.tsx
