[package]
name = "truckfi"
version = "0.1.0"
description = "TruckFi - Real World Asset protocol for freight trucks on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "truckfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
